// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-glyll0"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-nlfrt3"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-lm07yg"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Banned_Users
              </h5>
              <button
                aria-label="Close"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
                data-qa="ContextualbarActionClose"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              aria-label="Banned_Users"
              class="rcx-box rcx-box--full rcx-css-4k230l"
              role="list"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1pd039f rcx-css-1cb6i7s"
              >
                <div
                  data-testid="virtuoso-scroller"
                  data-virtuoso-scroller="true"
                  style="height: 100%; outline: none; overflow-y: auto; position: relative; width: 100%;"
                  tabindex="-1"
                >
                  <div
                    data-viewport-type="element"
                    style="height: 100%; position: absolute; top: 0px; width: 100%;"
                  >
                    <div
                      data-testid="virtuoso-item-list"
                      style="box-sizing: border-box; margin-top: 0px; padding-bottom: 0px; padding-top: 0px;"
                    >
                      <div
                        data-index="0"
                        data-item-index="0"
                        data-known-size="100"
                        style="overflow-anchor: none;"
                      >
                        <div
                          class="rcx-item rcx-item--medium rcx-item--inset-lg"
                          role="listitem"
                        >
                          <div
                            class="rcx-item__media"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="john.doe"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="john.doe"
                              />
                            </figure>
                          </div>
                          <div
                            aria-hidden="true"
                            class="rcx-item__icon"
                            id="_r_1_"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-item__content"
                          >
                            <div
                              class="rcx-item__title"
                            >
                              john.doe
                               
                            </div>
                          </div>
                          <div
                            class="rcx-item__actions rcx-item__actions--reveal-hover"
                          >
                            <div
                              class="rcx-item__actions-inner"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="More"
                                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                                id="react-aria-_r_2_"
                                title="More"
                                type="button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
                                >
                                  
                                </i>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-index="1"
                        data-item-index="1"
                        data-known-size="100"
                        style="overflow-anchor: none;"
                      >
                        <div
                          class="rcx-item rcx-item--medium rcx-item--inset-lg"
                          role="listitem"
                        >
                          <div
                            class="rcx-item__media"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="jane.smith:matrix.org"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="jane.smith:matrix.org"
                              />
                            </figure>
                          </div>
                          <div
                            aria-label="Federated"
                            class="rcx-item__icon"
                            id="_r_4_"
                            role="img"
                          >
                            <i
                              aria-hidden="true"
                              class="rcx-box rcx-box--full rcx-icon--name-globe rcx-icon rcx-css-1g87xs3"
                            >
                              
                            </i>
                          </div>
                          <div
                            class="rcx-item__content"
                          >
                            <div
                              class="rcx-item__title"
                            >
                              jane.smith:matrix.org
                               
                            </div>
                          </div>
                          <div
                            class="rcx-item__actions rcx-item__actions--reveal-hover"
                          >
                            <div
                              class="rcx-item__actions-inner"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="More"
                                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                                id="react-aria-_r_5_"
                                title="More"
                                type="button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
                                >
                                  
                                </i>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-index="2"
                        data-item-index="2"
                        data-known-size="100"
                        style="overflow-anchor: none;"
                      >
                        <div
                          class="rcx-item rcx-item--medium rcx-item--inset-lg"
                          role="listitem"
                        >
                          <div
                            class="rcx-item__media"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="rocket.cat"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="rocket.cat"
                              />
                            </figure>
                          </div>
                          <div
                            aria-hidden="true"
                            class="rcx-item__icon"
                            id="_r_7_"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-item__content"
                          >
                            <div
                              class="rcx-item__title"
                            >
                              rocket.cat
                               
                            </div>
                          </div>
                          <div
                            class="rcx-item__actions rcx-item__actions--reveal-hover"
                          >
                            <div
                              class="rcx-item__actions-inner"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="More"
                                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                                id="react-aria-_r_8_"
                                title="More"
                                type="button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
                                >
                                  
                                </i>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-124vum9"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders Empty without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-glyll0"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-nlfrt3"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-lm07yg"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Banned_Users
              </h5>
              <button
                aria-label="Close"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
                data-qa="ContextualbarActionClose"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-r8c38r"
            >
              <div
                class="rcx-states"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-ban rcx-icon rcx-css-d884y5"
                >
                  
                </i>
                <h3
                  class="rcx-states__title"
                >
                  No_banned_users
                </h3>
                <div
                  class="rcx-states__subtitle"
                >
                  No_banned_users_description
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-124vum9"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders Loading without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-glyll0"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-nlfrt3"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-lm07yg"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Banned_Users
              </h5>
              <button
                aria-label="Close"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
                data-qa="ContextualbarActionClose"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-nyqak3"
            >
              <div
                class="rcx-box rcx-box--full rcx-throbber"
              >
                <span
                  class="rcx-box rcx-box--full rcx-throbber__circle rcx-css-1xtde58 rcx-css-10wc9to"
                />
                <span
                  class="rcx-box rcx-box--full rcx-throbber__circle rcx-css-1mkyloh rcx-css-10wc9to"
                />
                <span
                  class="rcx-box rcx-box--full rcx-throbber__circle rcx-css-1r9rmv6 rcx-css-10wc9to"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-124vum9"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders WithError without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-glyll0"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-nlfrt3"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-lm07yg"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Banned_Users
              </h5>
              <button
                aria-label="Close"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
                data-qa="ContextualbarActionClose"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-r8c38r"
            >
              <div
                class="rcx-states"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-warning rcx-icon rcx-css-d884y5"
                >
                  
                </i>
                <h3
                  class="rcx-states__title"
                >
                  Banned_users_error
                </h3>
                <div
                  class="rcx-states__subtitle"
                >
                  Please_try_again
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-124vum9"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;

exports[`renders WithRealNames without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-glyll0"
    >
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        style="position: relative; user-select: auto; width: 380px; height: 100%; max-width: 50%; min-width: 380px; min-height: 100%; box-sizing: border-box; flex-shrink: 0;"
      >
        <div
          aria-labelledby="contextualbarTitle"
          class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-nlfrt3"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-lm07yg"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1l4fxfb"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon rcx-css-1yal9it"
              >
                
              </i>
              <h5
                class="rcx-box rcx-box--full rcx-css-1spko5i"
                id="contextualbarTitle"
              >
                Banned_Users
              </h5>
              <button
                aria-label="Close"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
                data-qa="ContextualbarActionClose"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </div>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1w66n2o"
          >
            <div
              aria-label="Banned_Users"
              class="rcx-box rcx-box--full rcx-css-4k230l"
              role="list"
            >
              <div
                class="rcx-box rcx-box--full rcx-css-1pd039f rcx-css-1cb6i7s"
              >
                <div
                  data-testid="virtuoso-scroller"
                  data-virtuoso-scroller="true"
                  style="height: 100%; outline: none; overflow-y: auto; position: relative; width: 100%;"
                  tabindex="-1"
                >
                  <div
                    data-viewport-type="element"
                    style="height: 100%; position: absolute; top: 0px; width: 100%;"
                  >
                    <div
                      data-testid="virtuoso-item-list"
                      style="box-sizing: border-box; margin-top: 0px; padding-bottom: 0px; padding-top: 0px;"
                    >
                      <div
                        data-index="0"
                        data-item-index="0"
                        data-known-size="100"
                        style="overflow-anchor: none;"
                      >
                        <div
                          class="rcx-item rcx-item--medium rcx-item--inset-lg"
                          role="listitem"
                        >
                          <div
                            class="rcx-item__media"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="john.doe"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="john.doe"
                              />
                            </figure>
                          </div>
                          <div
                            aria-hidden="true"
                            class="rcx-item__icon"
                            id="_r_e_"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-item__content"
                          >
                            <div
                              class="rcx-item__title"
                            >
                              John Doe
                               
                              <span
                                class="rcx-item__description rcx-item__description--inline"
                              >
                                @
                                john.doe
                              </span>
                            </div>
                          </div>
                          <div
                            class="rcx-item__actions rcx-item__actions--reveal-hover"
                          >
                            <div
                              class="rcx-item__actions-inner"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="More"
                                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                                id="react-aria-_r_f_"
                                title="More"
                                type="button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
                                >
                                  
                                </i>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-index="1"
                        data-item-index="1"
                        data-known-size="100"
                        style="overflow-anchor: none;"
                      >
                        <div
                          class="rcx-item rcx-item--medium rcx-item--inset-lg"
                          role="listitem"
                        >
                          <div
                            class="rcx-item__media"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="jane.smith:matrix.org"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="jane.smith:matrix.org"
                              />
                            </figure>
                          </div>
                          <div
                            aria-label="Federated"
                            class="rcx-item__icon"
                            id="_r_h_"
                            role="img"
                          >
                            <i
                              aria-hidden="true"
                              class="rcx-box rcx-box--full rcx-icon--name-globe rcx-icon rcx-css-1g87xs3"
                            >
                              
                            </i>
                          </div>
                          <div
                            class="rcx-item__content"
                          >
                            <div
                              class="rcx-item__title"
                            >
                              Jane Smith
                               
                              <span
                                class="rcx-item__description rcx-item__description--inline"
                              >
                                @
                                jane.smith:matrix.org
                              </span>
                            </div>
                          </div>
                          <div
                            class="rcx-item__actions rcx-item__actions--reveal-hover"
                          >
                            <div
                              class="rcx-item__actions-inner"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="More"
                                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                                id="react-aria-_r_i_"
                                title="More"
                                type="button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
                                >
                                  
                                </i>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        data-index="2"
                        data-item-index="2"
                        data-known-size="100"
                        style="overflow-anchor: none;"
                      >
                        <div
                          class="rcx-item rcx-item--medium rcx-item--inset-lg"
                          role="listitem"
                        >
                          <div
                            class="rcx-item__media"
                          >
                            <figure
                              class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x28"
                            >
                              <img
                                alt="Avatar"
                                aria-hidden="true"
                                class="rcx-avatar__element rcx-avatar__element--x28"
                                data-username="rocket.cat"
                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
                                title="rocket.cat"
                              />
                            </figure>
                          </div>
                          <div
                            aria-hidden="true"
                            class="rcx-item__icon"
                            id="_r_k_"
                          >
                            <svg
                              aria-hidden="true"
                              class="rcx-status-bullet rcx-status-bullet--loading undefined "
                              fill="none"
                              height="12"
                              title="Loading"
                              viewBox="0 0 12 12"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                class="rcx-status-bullet rcx-status-bullet--loading"
                                cx="6"
                                cy="6"
                                r="5"
                                stroke-dasharray="2 2"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                          <div
                            class="rcx-item__content"
                          >
                            <div
                              class="rcx-item__title"
                            >
                              Rocket.Cat
                               
                              <span
                                class="rcx-item__description rcx-item__description--inline"
                              >
                                @
                                rocket.cat
                              </span>
                            </div>
                          </div>
                          <div
                            class="rcx-item__actions rcx-item__actions--reveal-hover"
                          >
                            <div
                              class="rcx-item__actions-inner"
                            >
                              <button
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="More"
                                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                                id="react-aria-_r_l_"
                                title="More"
                                type="button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-4pvxx3"
                                >
                                  
                                </i>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; top: -5px; left: 0px; cursor: row-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 10px; height: 100%; top: 0px; cursor: col-resize; right: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 100%; height: 10px; left: 0px; cursor: row-resize; bottom: -5px;"
          />
          <div
            style="position: absolute; user-select: none; width: 3px; height: 100%; top: 0px; left: 0px; cursor: col-resize; z-index: 99;"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-124vum9"
            />
          </div>
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; top: -10px; cursor: ne-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; right: -10px; bottom: -10px; cursor: se-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; bottom: -10px; cursor: sw-resize;"
          />
          <div
            style="position: absolute; user-select: none; width: 20px; height: 20px; z-index: 1; left: -10px; top: -10px; cursor: nw-resize;"
          />
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</body>
`;
